[gd_scene load_steps=8 format=3 uid="uid://djlq83ljsxy1n"]

[ext_resource type="Script" path="res://scripts/ui/tutorial_control.gd" id="1_rtx4p"]
[ext_resource type="FontFile" uid="uid://cyiv5u0h8rkyq" path="res://fonts/Inter-VariableFont_slnt,wght.ttf" id="3_5s3vn"]
[ext_resource type="StyleBox" uid="uid://bbexbscjlpdwu" path="res://resources/button_filled.tres" id="4_dlyy3"]
[ext_resource type="StyleBox" uid="uid://dw5ntbfolxxn0" path="res://resources/button_filled_pressed.tres" id="5_blpnd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8eil1"]
bg_color = Color(0.180392, 0.235294, 0.278431, 1)
shadow_color = Color(0, 0, 0, 0.235294)
shadow_size = 2
shadow_offset = Vector2(2, 2)

[sub_resource type="LabelSettings" id="LabelSettings_fup0t"]
font = ExtResource("3_5s3vn")
font_size = 64
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="FontVariation" id="FontVariation_efmnj"]
base_font = ExtResource("3_5s3vn")
variation_embolden = 1.0

[node name="Tutorial" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_rtx4p")

[node name="0" type="Panel" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -521.0
offset_top = -301.0
offset_right = 521.0
offset_bottom = 301.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8eil1")

[node name="Label" type="Label" parent="0"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 107.0
grow_horizontal = 2
size_flags_horizontal = 8
size_flags_vertical = 1
text = "Welcome to factory frontier"
label_settings = SubResource("LabelSettings_fup0t")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="0"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -428.0
offset_top = -146.0
offset_right = 428.0
offset_bottom = 189.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("3_5s3vn")
theme_override_fonts/bold_font = SubResource("FontVariation_efmnj")
theme_override_font_sizes/normal_font_size = 32
theme_override_font_sizes/bold_font_size = 32
bbcode_enabled = true
text = "This is a quick tutorial on how to play, it should only take a few minutes to do.

Feel free to skip if you know what you're doing! "

[node name="HBoxContainer" type="HBoxContainer" parent="0"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -108.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 100
alignment = 1

[node name="Button2" type="Button" parent="0/HBoxContainer"]
custom_minimum_size = Vector2(220, 80)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("3_5s3vn")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("4_dlyy3")
theme_override_styles/hover = ExtResource("4_dlyy3")
theme_override_styles/pressed = ExtResource("5_blpnd")
text = "Continue"

[node name="Button" type="Button" parent="0/HBoxContainer"]
custom_minimum_size = Vector2(220, 80)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("3_5s3vn")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("4_dlyy3")
theme_override_styles/hover = ExtResource("4_dlyy3")
theme_override_styles/pressed = ExtResource("5_blpnd")
text = "Skip"

[node name="1" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -521.0
offset_top = -883.0
offset_right = 521.0
offset_bottom = -281.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8eil1")

[node name="Label" type="Label" parent="1"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 107.0
grow_horizontal = 2
size_flags_horizontal = 8
size_flags_vertical = 1
text = "Welcome to factory frontier"
label_settings = SubResource("LabelSettings_fup0t")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -428.0
offset_top = -146.0
offset_right = 428.0
offset_bottom = 189.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("3_5s3vn")
theme_override_fonts/bold_font = SubResource("FontVariation_efmnj")
theme_override_font_sizes/normal_font_size = 32
theme_override_font_sizes/bold_font_size = 32
bbcode_enabled = true
text = "First off buy an a dropper and a furnace from the [b]shop[/b].

(Press the shop button)"

[node name="HBoxContainer" type="HBoxContainer" parent="1"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -108.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 100
alignment = 1

[node name="Button2" type="Button" parent="1/HBoxContainer"]
custom_minimum_size = Vector2(220, 80)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("3_5s3vn")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("4_dlyy3")
theme_override_styles/hover = ExtResource("4_dlyy3")
theme_override_styles/pressed = ExtResource("5_blpnd")
text = "Continue"

[node name="Button3" type="Button" parent="1/HBoxContainer"]
custom_minimum_size = Vector2(220, 80)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("3_5s3vn")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("4_dlyy3")
theme_override_styles/hover = ExtResource("4_dlyy3")
theme_override_styles/pressed = ExtResource("5_blpnd")
text = "Back"

[node name="2" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -521.0
offset_top = -883.0
offset_right = 521.0
offset_bottom = -281.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8eil1")

[node name="Label" type="Label" parent="2"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 107.0
grow_horizontal = 2
size_flags_horizontal = 8
size_flags_vertical = 1
text = "Welcome to factory frontier"
label_settings = SubResource("LabelSettings_fup0t")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -428.0
offset_top = -146.0
offset_right = 428.0
offset_bottom = 189.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("3_5s3vn")
theme_override_fonts/bold_font = SubResource("FontVariation_efmnj")
theme_override_font_sizes/normal_font_size = 32
theme_override_font_sizes/bold_font_size = 32
bbcode_enabled = true
text = "Now go to your inventory and place them down. (rotate so dropper faces furnace)"

[node name="HBoxContainer" type="HBoxContainer" parent="2"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -108.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 100
alignment = 1

[node name="Button2" type="Button" parent="2/HBoxContainer"]
custom_minimum_size = Vector2(220, 80)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("3_5s3vn")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("4_dlyy3")
theme_override_styles/hover = ExtResource("4_dlyy3")
theme_override_styles/pressed = ExtResource("5_blpnd")
text = "Continue"

[node name="Button3" type="Button" parent="2/HBoxContainer"]
custom_minimum_size = Vector2(220, 80)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("3_5s3vn")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("4_dlyy3")
theme_override_styles/hover = ExtResource("4_dlyy3")
theme_override_styles/pressed = ExtResource("5_blpnd")
text = "Back"

[node name="3" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -521.0
offset_top = -301.0
offset_right = 521.0
offset_bottom = 301.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8eil1")

[node name="Label" type="Label" parent="3"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 107.0
grow_horizontal = 2
size_flags_horizontal = 8
size_flags_vertical = 1
text = "Welcome to factory frontier"
label_settings = SubResource("LabelSettings_fup0t")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -428.0
offset_top = -146.0
offset_right = 428.0
offset_bottom = 189.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("3_5s3vn")
theme_override_fonts/bold_font = SubResource("FontVariation_efmnj")
theme_override_font_sizes/normal_font_size = 32
theme_override_font_sizes/bold_font_size = 32
bbcode_enabled = true
text = "Now you should be earning money! Congrats...

Now save up to buy conveyors & upgraders to expand your factory."

[node name="HBoxContainer" type="HBoxContainer" parent="3"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -108.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 100
alignment = 1

[node name="Button3" type="Button" parent="3/HBoxContainer"]
custom_minimum_size = Vector2(220, 80)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("3_5s3vn")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("4_dlyy3")
theme_override_styles/hover = ExtResource("4_dlyy3")
theme_override_styles/pressed = ExtResource("5_blpnd")
text = "Back"

[node name="Button" type="Button" parent="3/HBoxContainer"]
custom_minimum_size = Vector2(220, 80)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("3_5s3vn")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("4_dlyy3")
theme_override_styles/hover = ExtResource("4_dlyy3")
theme_override_styles/pressed = ExtResource("5_blpnd")
text = "Finish"

[connection signal="pressed" from="0/HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="0/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="1/HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="1/HBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="2/HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="2/HBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="3/HBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="3/HBoxContainer/Button" to="." method="_on_button_pressed"]
